fix edit button visibility on visible false state

--- a/components/Layout/EditButton/style.scss
+++ b/components/Layout/EditButton/style.scss
@@ -11,7 +11,7 @@ button {
     flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
-    opacity: 1;
+    opacity: 0;
 
     transition-property: opacity;
     transition-timing-function: ease-in-out;
@@ -36,11 +36,16 @@ button {
 
     &:disabled {
       cursor: not-allowed;
+    }
+
+    &.visible,
+    &:disabled {
       opacity: 0.7;
     }
 
     &.visible {
       cursor: pointer;
+      opacity: 1;
     }
   }
 }
