--- a/components/Layout/modals/ModalWithTitle/style.scss
+++ b/components/Layout/modals/ModalWithTitle/style.scss
@@ -56,6 +56,7 @@
             }
 
             & > .title {
+              user-select: none;
               @include typography(app-body-1);
 
               color: var(--text-body-primary);
